<resources>
    <string name="app_name">Instagram clone</string>
    <string name="str_instagram">Instagram</string>
    <string name="str_fullName">Full name</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_cPassword">Confirm password</string>
    <string name="str_signIn">Sign In</string>
    <string name="str_signUp">Sign Up</string>
    <string name="str_already_account">Already have an account?</string>
    <string name="str_donot_account">Don\'t you have an account?</string>
    <string name="str_home">Home</string>
    <string name="str_search">Search</string>
    <string name="str_upload">Upload</string>
    <string name="str_favorite">Favorite</string>
    <string name="str_profile">Profile</string>
    <string name="str_write_caption">Write a caption</string>
    <string name="str_follow">Follow</string>
    <string name="str_following">Following</string>
    <string name="str_followers">Followers</string>
    <string name="str_posts">Posts</string>
    <string name="str_signIn_success">Sign in successfully!</string>
    <string name="str_signIn_failed">Sign in failed!</string>
    <string name="str_signUp_success">Sign up successfully!</string>
    <string name="str_signUp_failed">Sign up failed!</string>
    
    <string name="str_cancel">Cancel</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_delete_post">Do you want to delete this post?</string>
    
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>